Added autocompletion for search command